--- a/Skylift/Skylift.WebApi/Skylift.WebApi.csproj
+++ b/Skylift/Skylift.WebApi/Skylift.WebApi.csproj
@@ -11,6 +11,13 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.9" />
+    <PackageReference Include="NLog.Web.AspNetCore" Version="4.7.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Skylift.Core\Skylift.Core.csproj" />
+    <ProjectReference Include="..\Skylift.Plumbing\Skylift.Plumbing.csproj" />
   </ItemGroup>
 
 </Project>
