--- a/Skylift/Skylift.WebApi/appsettings.json
+++ b/Skylift/Skylift.WebApi/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost; Database=skylift_local; Uid=root; Pwd=123456;Pooling=True;"
+  }
 }
